tests/baselines/reference/octalLiteralInStrictModeES3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/octalLiteralInStrictModeES3.ts (1 errors) ====
    "use strict";
    03;
    ~~
!!! error TS1121: Octal literals are not allowed in strict mode.